--- a/detalhes.html
+++ b/detalhes.html
@@ -2,23 +2,20 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <meta charset="UTF-8">
     </head>
 
 <body>
-<article>
     <header>
         <div>
-            <h2>
-                <p style="display:inline-block;">
-                    <img src="Antonio.png" width=200>
-                <pre>
-                    <a href='index.html'> Home </a>        <a href='detalhes.html'> Detalhes </a>        <a href='sobre.html'> Sobre o Autor </a>
-                </pre> </p>  
-            </h2>
+            <img class="image_header" src="Antonio.png" width="100">
+            <br> <pre><a href='index.html'> Home </a>        <a href='detalhes.html'> Detalhes </a>        <a href='sobre.html'> Sobre o Autor </a> </pre>
         </div>
     </header>
 
-    <h2> Experiência em:</h2>
+    <div id="pageTitle"> Experiência em:</div>
+    <div id="exp">
         <h3>
             <ul>
                 <li>C#</li>
@@ -29,18 +26,13 @@
                 <li>Java</li>
                 <li>Python</li>
             </ul>
-
-            <br>
         </h3>
+    </div>
     
-        <div>
-            <footer>
-                <nav>
-                    </p><h2>Contato: antoniopaz1987@gmail.com</h2>
-                </nav> 
-            </footer>
-        </div>
-</article>
+    <footer>
+        <br> <br> <br>
+        </p><h2>Autor: Antônio Paz</h2>
+    </footer>
 </body>
 </html>
 
