--- a/index.html
+++ b/index.html
@@ -2,37 +2,35 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <meta charset="UTF-8">
     </head>
 
 <body>
-<article>
     <header>
         <div>
-            <h2>
-                <p style="display:inline-block;">
-                    <img src="Antonio.png" width=200>
-                <pre>
-                    <a href='index.html'> Home </a>        <a href='detalhes.html'> Detalhes </a>        <a href='sobre.html'> Sobre o Autor </a>
-                </pre> </p>  
-            </h2>
+            <img class="image_header" src="Antonio.png" width="100">
+            <br> <pre><a href='index.html'> Home </a>        <a href='detalhes.html'> Detalhes </a>        <a href='sobre.html'> Sobre o Autor </a> </pre>
         </div>
-    </header>    
-        <h2> Projetos Desenvolvidos</h2>
+    </header>
     
-        <img src="Anim.jpg" width="825">
-        <img src="Mesh.JPG" width="825">
-        <img src="Menu.JPG">
-        <img src="Shoot.JPG">
+    <section>
+        <div id="pageTitle"> Projetos Desenvolvidos</div>    
+        
+        <div id="imagens">
+            <img src="Anim.jpg" width="625" height="470">
+            <img src="Mesh.JPG" width="625" height="470">
+            <img src="Menu.JPG" width="625" height="470">
+            <img src="Shoot.JPG" width="625" height="470">
+        </div>
+    </section>
 
-        <br>    
     <div>
         <footer>
-            <nav>
-                </p><h2>Contato: antoniopaz1987@gmail.com</h2>
-            </nav> 
+            <br><br><br>
+            </p><h2>Autor: Antônio Paz</h2>
         </footer>
     </div>
-</article>
 </body>
 </html>
 
