--- a/sobre.html
+++ b/sobre.html
@@ -2,39 +2,51 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <meta charset="UTF-8">
     </head>
 
 <body>
-<article>
     <header>
         <div>
-            <h2>
-                <p style="display:inline-block;">
-                    <img src="Antonio.png" width=200>
-                <pre>
-                    <a href='index.html'> Home </a>        <a href='detalhes.html'> Detalhes </a>        <a href='sobre.html'> Sobre o Autor </a>
-                </pre> </p>  
-            </h2>
+            <img class="image_header" src="Antonio.png" width="100">
+            <br> <pre><a href='index.html'> Home </a>        <a href='detalhes.html'> Detalhes </a>        <a href='sobre.html'> Sobre o Autor </a> </pre>
         </div>
     </header>
 
-    <h3>
-        <p>Arquiteto de Software</p>
-        <p>Desenvolvedor e Designer de Jogos</p>
-        <p>Engenheiro de Controle e Automação</p>
+    <section>
+        <div id="pageTitle"> Qualificação Profissional</div>
+        <h3>
+            <p>Arquiteto de Software</p>
+            <p>Desenvolvedor e Designer de Jogos</p>
+            <p>Engenheiro de Controle e Automação</p>        
+        </h3>
+    </section>
 
-        <br>
-    </h3>
+    <div id="box-1">
+        <div class="foo">
+          <div class="bar">
+            <div class="mostrar">
+                antoniopaz1987@gmail.com
+            </div>
+          </div>
+        </div>
+
+        <div class="baz">
+            <a class="show-action" href="#box-1"><button id="buttonText">Exibir contato</button></a>
+            <a class="hide-action" href="#"><button id="buttonText">Ocultar contato</button></a>
+        </div>
+      </div>
+      
 
     <div>
         <footer>
-            <nav>
-                </p><h2>Contato: antoniopaz1987@gmail.com</h2>
-            </nav> 
+            <br> <br> <br>
+            <h2>Autor: Antônio Paz</h2> 
         </footer>
     </div>
     
-</article>
+
 </body>
 </html>
 
